--- a/DX_Ball_RNN.ipynb
+++ b/DX_Ball_RNN.ipynb
@@ -655,7 +655,7 @@
         "        final_output = self.final_conv(last_output)  # Convert to the required output image\n",
         "        return final_output\n",
         "\n",
-        "# Example Usage:\n",
+        "# Parameters for Model Architecture:\n",
         "channels = 1  # Grayscale images\n",
         "hidden_dims = [64, 64, 128]  # Hidden dimensions for each ConvLSTM layer\n",
         "kernel_size = (3, 3)  # Kernel size for ConvLSTM cells\n",
